tekton/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webhook-rhdh-usring-test-123456-el
  namespace: wwdu
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: rhdh-usring-test-123456-el
spec:
  to:
    kind: Service
    name: el-rhdh-usring-test-123456-el
    weight: 100
  port:
    targetPort: http-listener
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
